--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,18 @@ venv/
 *.jpg
 __pycache__/
 template.psd
+.idea/
+*.iml
+*.iws
+*.eml
+out/
+.DS_Store
+.svn
+log/*.log
+tmp/**
+node_modules/
+package-lock.json
+.sass-cache
+css/reveal.min.css
+js/reveal.min.js
+
